<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.MainActivity">
    <include layout="@layout/toolbar" android:id="@+id/include"/>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/time_elapsed_layout"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/include" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp">

        <TextView
                android:text="@string/time_elapsed_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/time_elapsed_label" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" android:textColor="@android:color/black"
                android:textSize="18sp"/>
        <Chronometer android:layout_width="wrap_content" android:layout_height="wrap_content"
                     android:id="@+id/elapsed_time"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintHorizontal_bias="0.494"
                     app:layout_constraintTop_toBottomOf="@+id/time_elapsed_label"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/num_checks_layout"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/include" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp">

        <TextView
                android:text="@string/num_checks_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/num_checks_label"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:textColor="@android:color/black"
                android:textSize="18sp"/>
        <TextView
                android:text="@string/zero_checks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/num_checks"
                app:layout_constraintTop_toBottomOf="@+id/num_checks_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:textColor="@android:color/black"
                android:textSize="18sp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/progress_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/time_elapsed_layout"
            app:layout_constraintBottom_toTopOf="@+id/adView" android:layout_marginBottom="65dp">

        <ProgressBar
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:id="@+id/progressBar"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:progressDrawable="@drawable/circle_progress_bar"
                android:progressBackgroundTint="@color/grey"
                android:max="5000"
                android:progress="0"
                tools:progress="5000"
                android:rotation="90"
                android:scaleX="-1" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:id="@+id/chronometer" tools:text="5:00"
                  android:textSize="36sp"
                  android:layout_marginTop="8dp"
                  app:layout_constraintTop_toTopOf="parent"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintBottom_toBottomOf="@+id/progressBar" android:textColor="@android:color/black"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/cancel_button"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:visibility="visible"
            android:text="@string/cancel_button_text"
            android:background="@android:color/holo_red_dark" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintBottom_toTopOf="@+id/adView"/>
    <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/start_button"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:visibility="visible"
            android:text="@string/start_button_text"
            android:background="@android:color/holo_green_light" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintBottom_toTopOf="@+id/adView"/>
    <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-3940256099942544/6300978111"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/adView" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>